# stringed

./: README.rst  pyproject.toml
docs/: CNAME
src/stringed/: __init__.py
src/stringed/core/: __init__.py
