[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "datahold>=2.3.0.dev2,<3",
    "datarepr",
    "cmp3",
]
description = "This project provides StrKeyDict."
keywords = []
name = "stringed"
readme = "README.rst"
requires-python = ">=3.11"
version = "0.0.0.dev0"

[project.license]
file = "LICENSE.txt"

[project.urls]
Download = "https://pypi.org/project/stringed/#files"
Index = "https://pypi.org/project/stringed/"
Source = "https://github.com/johannes-programming/stringed/"
Website = "https://stringed.johannes-programming.online/"
